--- a/notebooks/twitter_retriever.ipynb
+++ b/notebooks/twitter_retriever.ipynb
@@ -6,21 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import matplotlib.pyplot as plt\n",
-    "#import seaborn as sns\n",
-    "#import numpy as np\n",
-    "#import pandas as pd\n",
-    "import json\n",
-    "#from pprint import pprint\n",
-    "#import codecs\n",
-    "#import re\n",
-    "#import requests\n",
-    "#import time\n",
-    "\n",
-    "import dns\n",
-    "\n",
-    "#import urllib.parse\n",
-    "#from IPython.display import clear_output"
+    "import json"
    ]
   },
   {
@@ -34,13 +20,6 @@
     "* API.friends_ids(id/screen_name/user_id[, cursor])\n",
     "\n",
     "* https://pythonprogramming.net/twitter-api-streaming-tweets-python-tutorial/"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "print('coordinates:', tweet['coordinates'], '\\r\\nplace:', tweet['coordinates'], '\\r\\nuser_loc:', tweet['user']['location'], '\\r\\nlang:', tweet['lang'])"
    ]
   },
   {
@@ -94,18 +73,21 @@
    "source": [
     "import pymongo\n",
     "from pymongo import MongoClient\n",
+    "import dns\n",
     "URI = 'mongodb+srv://m001-student:m001-mongodb-basics@sandbox-qvvwz.mongodb.net/test?retryWrites=true&w=majority'\n",
     "client = MongoClient(URI)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "db = client.twitter\n",
-    "collection = db.aedes"
+    "collection = db.aedes # test collection\n",
+    "collection_all = db.aedes_all\n",
+    "collection_pt = db.aedes_pt"
    ]
   },
   {
@@ -116,25 +98,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection.drop()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### start retrieval\n",
-    "Tokens used at UFMG are: dengue, aedes aegypti, chikungunya, zika, zica virus, chikungunia, mayaro"
+    "* Tokens used at UFMG are: dengue, aedes aegypti, chikungunya, zika, zica virus, chikungunia, mayaro\n",
+    "* By setting tweet_mode='extended', I am capturing full text (280) chars. If I want truncated text (standard mode), I need 140 chars."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +117,10 @@
     "    def on_data(self, data):\n",
     "        data = json.loads(data)\n",
     "        data[\"_id\"] = data[\"id\"]\n",
-    "        collection.insert_one(data)\n",
+    "\n",
+    "        collection_all.insert_one(data)\n",
+    "        if data['lang'] == \"pt\":\n",
+    "            collection_pt.insert_one(data)\n",
     "        return data\n",
     "\n",
     "    def on_error(self, status):\n",
@@ -156,8 +133,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "twitterStream = Stream(auth, listener())\n",
-    "twitterStream.filter(track=[\"dengue\", \"aedes aegypti\", \"chikungunya\", \"zika\", \"zica virus\", \"chikungunia\", \"mayaro\"])"
+    "twitterStream = Stream(auth, listener(), tweet_mode='extended')\n",
+    "twitterStream.filter(track=[\"car\", \"dengue\", \"aedes aegypti\", \"chikungunya\", \"zika\", \"zica virus\", \"chikungunia\", \"mayaro\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document = collection.find({})[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coordinates: None \r\n",
+      "place: None \r\n",
+      "user_loc: Bom Jardim, Brasil \r\n",
+      "lang: pt\n",
+      "\r\n",
+      "TEXT\r\n",
+      " Caráter dinheiro nenhum compra posso ñ  ter td q sonhei mas ñ troco minha vida por nenhuma outra. Ñ pelo q eu tenho… https://t.co/7gXgHVwRCl\n",
+      "\r\n",
+      "Full TEXT\r\n",
+      " Caráter dinheiro nenhum compra posso ñ  ter td q sonhei mas ñ troco minha vida por nenhuma outra. Ñ pelo q eu tenho,mas pelo q sou. Bens materias a gente trabalha e conquista, mas caráter  dinheiro nenhum compra!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('coordinates:', document['coordinates'], '\\r\\nplace:', document['coordinates'], '\\r\\nuser_loc:', document['user']['location'], '\\r\\nlang:', document['lang'])\n",
+    "print('\\r\\nTEXT\\r\\n', document[\"text\"])\n",
+    "print('\\r\\nFull TEXT\\r\\n', document['extended_tweet'][\"full_text\"])"
    ]
   },
   {
