--- a/notebooks/anvil_func.ipynb
+++ b/notebooks/anvil_func.ipynb
@@ -22,11 +22,11 @@
     "#from tweepy import OAuthHandler\n",
     "#from tweepy.streaming import StreamListener\n",
     "\n",
-    "import requests\n",
-    "import urllib.parse\n",
+    "import pymongo\n",
+    "from pymongo import MongoClient\n",
     "import dns\n",
-    "from time import gmtime, strftime\n",
     "\n",
+    "from time import gmtime, strftime\n",
     "from datetime import datetime, timedelta"
    ]
   },
@@ -43,9 +43,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymongo\n",
-    "from pymongo import MongoClient\n",
-    "import dns\n",
     "URI = 'mongodb+srv://m001-student:m001-mongodb-basics@sandbox-qvvwz.mongodb.net/test?retryWrites=true&w=majority'\n",
     "client = MongoClient(URI)"
    ]
@@ -100,6 +97,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_special_char(text):\n",
+    "    text = re.sub('[áàãâ]', 'a', text)\n",
+    "    text = re.sub('[óòõô]', 'o', text)\n",
+    "    text = re.sub('[éèê]', 'e', text)\n",
+    "    text = re.sub('[íì]', 'i', text)\n",
+    "    text = re.sub('[úù]', 'u', text)\n",
+    "    text = re.sub('ç', 'c', text)\n",
+    "    return text"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
@@ -126,17 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "alldocs = list(collection_pt.find({}))\n",
-    "main_keys = ['_id', 'created_at', 'text']"
+    "main_keys = ['_id', 'created_at']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,21 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "anvil_docs = []\n",
     "for doc in alldocs:\n",
     "    anvil_doc = {key: doc[key] for key in main_keys}\n",
+    "    \n",
     "    geo_location = add_loc(doc)\n",
     "    anvil_doc['geo_location'] = geo_location\n",
+    "    \n",
+    "    anvil_doc['text'] = remove_special_char(doc['text'])\n",
+    "    \n",
     "    anvil_docs.append(anvil_doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -194,137 +211,111 @@
       "text/plain": [
        "[{'_id': 1138942823582044160,\n",
        "  'created_at': 'Wed Jun 12 22:55:04 +0000 2019',\n",
-       "  'text': '@dududhb Aproveitando aqui, feliz dia dos namo beleza, te amo zika',\n",
-       "  'geo': None,\n",
-       "  'geo_location': 'Campinas'},\n",
+       "  'geo_location': 'Campinas',\n",
+       "  'text': '@dududhb Aproveitando aqui, feliz dia dos namo beleza, te amo zika'},\n",
        " {'_id': 1138942826778177538,\n",
        "  'created_at': 'Wed Jun 12 22:55:05 +0000 2019',\n",
-       "  'text': '@negolabio Papo de mil zika, gordinho rodou man, por fita do passado man, o que é pior 😓',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': '@negolabio Papo de mil zika, gordinho rodou man, por fita do passado man, o que e pior 😓'},\n",
        " {'_id': 1138942834915127296,\n",
        "  'created_at': 'Wed Jun 12 22:55:07 +0000 2019',\n",
-       "  'text': 'Eu queria ser um mosquito da dengue pra ver a cara da conja agora!',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'Eu queria ser um mosquito da dengue pra ver a cara da conja agora!'},\n",
        " {'_id': 1138942966964375554,\n",
        "  'created_at': 'Wed Jun 12 22:55:38 +0000 2019',\n",
-       "  'text': 'RT @luanxlll: sai pra lá zika',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'RT @luanxlll: sai pra la zika'},\n",
        " {'_id': 1138942968700788737,\n",
        "  'created_at': 'Wed Jun 12 22:55:38 +0000 2019',\n",
-       "  'text': 'meu deus acabei de ser violentamente agredido por um mosquito elvis egiptio se este perfil apresentar sintomas de d… https://t.co/j4P8Xe3D4A',\n",
-       "  'geo': None,\n",
-       "  'geo_location': 'Dourados'},\n",
+       "  'geo_location': 'Dourados',\n",
+       "  'text': 'meu deus acabei de ser violentamente agredido por um mosquito elvis egiptio se este perfil apresentar sintomas de d… https://t.co/j4P8Xe3D4A'},\n",
        " {'_id': 1138942995007451136,\n",
        "  'created_at': 'Wed Jun 12 22:55:45 +0000 2019',\n",
-       "  'text': 'RT @meritogracinha: Eu queria ser um mosquito da dengue pra ver a cara da conja agora!',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'RT @meritogracinha: Eu queria ser um mosquito da dengue pra ver a cara da conja agora!'},\n",
        " {'_id': 1138943156072919041,\n",
        "  'created_at': 'Wed Jun 12 22:56:23 +0000 2019',\n",
-       "  'text': 'comer uma comidinha japonesa e tomar um vinho \\naaah esse meu padrasto é zika',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'comer uma comidinha japonesa e tomar um vinho \\naaah esse meu padrasto e zika'},\n",
        " {'_id': 1138943176138514434,\n",
        "  'created_at': 'Wed Jun 12 22:56:28 +0000 2019',\n",
-       "  'text': 'RT @meritogracinha: Eu queria ser um mosquito da dengue pra ver a cara da conja agora!',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'RT @meritogracinha: Eu queria ser um mosquito da dengue pra ver a cara da conja agora!'},\n",
        " {'_id': 1138943328412676098,\n",
        "  'created_at': 'Wed Jun 12 22:57:04 +0000 2019',\n",
-       "  'text': 'RT @g1mogi: Com mais de 100 casos de dengue, alunos de Biritiba Mirim alertam sobre os perigos da doença https://t.co/veRrRw7cav',\n",
-       "  'geo': None,\n",
-       "  'geo_location': 'SP'},\n",
+       "  'geo_location': 'SP',\n",
+       "  'text': 'RT @g1mogi: Com mais de 100 casos de dengue, alunos de Biritiba Mirim alertam sobre os perigos da doenca https://t.co/veRrRw7cav'},\n",
        " {'_id': 1138943464597524481,\n",
        "  'created_at': 'Wed Jun 12 22:57:37 +0000 2019',\n",
-       "  'text': 'cara, não faço ideia?\\n7 anos, dengue\\n2 anos, acidente de carro\\n1 ano, afogamento na praia quando a onda me arrastou… https://t.co/j3UE6PmKNx',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'cara, nao faco ideia?\\n7 anos, dengue\\n2 anos, acidente de carro\\n1 ano, afogamento na praia quando a onda me arrastou… https://t.co/j3UE6PmKNx'},\n",
        " {'_id': 1138943519157039104,\n",
        "  'created_at': 'Wed Jun 12 22:57:50 +0000 2019',\n",
-       "  'text': 'eu &gt;acho&lt; que era pra eu ter morrido idk acho',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'eu &gt;acho&lt; que era pra eu ter morrido idk acho'},\n",
        " {'_id': 1138943522252496897,\n",
        "  'created_at': 'Wed Jun 12 22:57:50 +0000 2019',\n",
-       "  'text': 'RT @meritogracinha: Eu queria ser um mosquito da dengue pra ver a cara da conja agora!',\n",
-       "  'geo': None,\n",
-       "  'geo_location': 'SP'},\n",
+       "  'geo_location': 'SP',\n",
+       "  'text': 'RT @meritogracinha: Eu queria ser um mosquito da dengue pra ver a cara da conja agora!'},\n",
        " {'_id': 1138943529147949057,\n",
        "  'created_at': 'Wed Jun 12 22:57:52 +0000 2019',\n",
-       "  'text': 'mas ela é zika',\n",
-       "  'geo': None,\n",
-       "  'geo_location': 'Goiânia'},\n",
+       "  'geo_location': 'Goiânia',\n",
+       "  'text': 'mas ela e zika'},\n",
        " {'_id': 1138943638954811395,\n",
        "  'created_at': 'Wed Jun 12 22:58:18 +0000 2019',\n",
-       "  'text': 'não bastava anemia, dengue, ainda sofro acidente de carro , pqpppp',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'nao bastava anemia, dengue, ainda sofro acidente de carro , pqpppp'},\n",
        " {'_id': 1138943736283566081,\n",
        "  'created_at': 'Wed Jun 12 22:58:41 +0000 2019',\n",
-       "  'text': 'Amanhã faz 7 dias que peguei dengue e dps de já ter tomando uns 20 remédios eu não me abalo mais com nada',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'Amanha faz 7 dias que peguei dengue e dps de ja ter tomando uns 20 remedios eu nao me abalo mais com nada'},\n",
        " {'_id': 1138943806013890561,\n",
        "  'created_at': 'Wed Jun 12 22:58:58 +0000 2019',\n",
-       "  'text': 'a única séria msm foi o da piscina pq eu lembro de engolir muita água okkksksk porém sigo viva',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'a unica seria msm foi o da piscina pq eu lembro de engolir muita agua okkksksk porem sigo viva'},\n",
        " {'_id': 1141831039238791180,\n",
        "  'created_at': 'Thu Jun 20 22:11:48 +0000 2019',\n",
-       "  'text': '@hellenzera_ @alifer_costa Nem souuuuuuu, se sabe zika',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': '@hellenzera_ @alifer_costa Nem souuuuuuu, se sabe zika'},\n",
        " {'_id': 1141831049397309441,\n",
        "  'created_at': 'Thu Jun 20 22:11:51 +0000 2019',\n",
-       "  'text': 'Acordei mto fudido hj e fui pro hospital. To com dengue. Ai a medica perguntou se precisava de atestado, falei q nn… https://t.co/suF3iEHkDl',\n",
-       "  'geo': None,\n",
-       "  'geo_location': 'Maceió'},\n",
+       "  'geo_location': 'Maceió',\n",
+       "  'text': 'Acordei mto fudido hj e fui pro hospital. To com dengue. Ai a medica perguntou se precisava de atestado, falei q nn… https://t.co/suF3iEHkDl'},\n",
        " {'_id': 1150062230018363392,\n",
        "  'created_at': 'Sat Jul 13 15:19:37 +0000 2019',\n",
-       "  'text': 'RT @PresidenciaRD: El Aedes Aegypti se cría en agua limpia, esa que acumulamos en tanques y otros recipientes del hogar. Es mucho lo que pu…',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'RT @PresidenciaRD: El Aedes Aegypti se cria en agua limpia, esa que acumulamos en tanques y otros recipientes del hogar. Es mucho lo que pu…'},\n",
        " {'_id': 1150062311698259968,\n",
        "  'created_at': 'Sat Jul 13 15:19:56 +0000 2019',\n",
-       "  'text': '#Córdoba | Córdoba entre los 10 departamentos con más reportes de casos de dengue | https://t.co/zTHtrOFcct #Dengue https://t.co/IAZpyvhM8x',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': '#Cordoba | Cordoba entre los 10 departamentos con mas reportes de casos de dengue | https://t.co/zTHtrOFcct #Dengue https://t.co/IAZpyvhM8x'},\n",
        " {'_id': 1150062326223167490,\n",
        "  'created_at': 'Sat Jul 13 15:20:00 +0000 2019',\n",
-       "  'text': 'Número de imóveis visitados em ação contra dengue caiu 25% em Americana - https://t.co/nT8dBxKFdN',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'Numero de imoveis visitados em acao contra dengue caiu 25% em Americana - https://t.co/nT8dBxKFdN'},\n",
        " {'_id': 1150062326487420928,\n",
        "  'created_at': 'Sat Jul 13 15:20:00 +0000 2019',\n",
-       "  'text': 'RT @ana_alicia_m: La falta de escrúpulos del imperialismo lo han llevado a concebir acciones monstruosas contra #Cuba. La guerra biológica,…',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'RT @ana_alicia_m: La falta de escrupulos del imperialismo lo han llevado a concebir acciones monstruosas contra #Cuba. La guerra biologica,…'},\n",
        " {'_id': 1150062651831025665,\n",
        "  'created_at': 'Sat Jul 13 15:21:17 +0000 2019',\n",
-       "  'text': 'RT @OPSOMS_Honduras: No le demos lugar al zancudo 🦟 transmisor del dengue, todos en casa hacer su parte, hoy es un buen día 🌞 para iLimpiar…',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'RT @OPSOMS_Honduras: No le demos lugar al zancudo 🦟 transmisor del dengue, todos en casa hacer su parte, hoy es un buen dia 🌞 para iLimpiar…'},\n",
        " {'_id': 1150062690016083969,\n",
        "  'created_at': 'Sat Jul 13 15:21:27 +0000 2019',\n",
-       "  'text': 'RT @SEDIS_HN: ¡La lucha contra el dengue es un compromiso de todos! \\n#ElDengueMata https://t.co/wngh5a2PCN',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'RT @SEDIS_HN: ¡La lucha contra el dengue es un compromiso de todos! \\n#ElDengueMata https://t.co/wngh5a2PCN'},\n",
        " {'_id': 1150064771795996673,\n",
        "  'created_at': 'Sat Jul 13 15:29:43 +0000 2019',\n",
-       "  'text': 'RT @cerromurillost: Por dengue hemorrágico, murió niña de 6 meses en Valledupar https://t.co/CD3yCb9qSY https://t.co/3UclmuMOvv',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None},\n",
+       "  'geo_location': None,\n",
+       "  'text': 'RT @cerromurillost: Por dengue hemorragico, murio niña de 6 meses en Valledupar https://t.co/CD3yCb9qSY https://t.co/3UclmuMOvv'},\n",
        " {'_id': 1150064819992694785,\n",
        "  'created_at': 'Sat Jul 13 15:29:54 +0000 2019',\n",
-       "  'text': 'Asciende a 51 el número de muertes por dengue en Honduras - https://t.co/aCNyMGkGtC https://t.co/oVApfziBRS',\n",
-       "  'geo': None,\n",
-       "  'geo_location': None}]"
+       "  'geo_location': None,\n",
+       "  'text': 'Asciende a 51 el numero de muertes por dengue en Honduras - https://t.co/aCNyMGkGtC https://t.co/oVApfziBRS'}]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,10 +325,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "doc = collection_myhome2.find_one()\n",
     "doc_id = doc['_id']\n",
@@ -356,25 +345,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_id': 1147612805002084352,\n",
-       " 'date': datetime.datetime(2019, 7, 6, 21, 6, 28),\n",
-       " 'text': 'ou é dengue',\n",
-       " 'geo_location': '',\n",
-       " 'user': 'Marcelo'}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "data"
    ]
@@ -383,8 +355,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# compare 2 asynchronous databases"
+    "# dump json"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.dump(anvil_docs, open('anvil_docs.json', 'w'))\n",
+    "#json.load(anvil_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
