removed drafts, recover from here

--- a/notebooks/twitter_retriever.ipynb
+++ b/notebooks/twitter_retriever.ipynb
@@ -90,9 +90,8 @@
     "collection_all = db.aedes_all\n",
     "collection_pt = db.aedes_pt\n",
     "\n",
-    "collection_lambda2 = db.aedes_lambda2\n",
-    "collection_myhome2 = db.aedes_myhome2\n",
-    "collection_myerror = db.aedes_myerror"
+    "collection_lambda = db.aedes_lambda\n",
+    "collection_myhome = db.aedes_myhome"
    ]
   },
   {
@@ -103,14 +102,7 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    " collection_test.drop()"
-   ]
-  },
-  {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### start retrieval\n",
@@ -129,45 +121,17 @@
     "    def on_data(self, data):\n",
     "        data = json.loads(data)\n",
     "        data[\"_id\"] = data[\"id\"]\n",
-    "\n",
     "        try: \n",
     "            collection_myhome2.insert_one(data)\n",
-    "            #if data['lang'] == \"pt\":\n",
-    "            #    collection_pt.insert_one(data)\n",
+    "\n",
     "        except Exception as error:\n",
     "            error = str(error)\n",
     "            if 'duplicate key error' in error:\n",
-    "                ### register duplicate ###\n",
-    "                #error_data = {}\n",
-    "                #error_data['error'] = 'duplicated file on home note'\n",
-    "                #error_data['id'] = data['id']\n",
-    "                #cur_time = strftime(\"%Y-%m-%d %H:%M:%S\", gmtime())\n",
-    "                #error_data['time'] = cur_time\n",
-    "                #collection_test.insert_one(error_data)\n",
     "                pass\n",
     "            return data\n",
     "\n",
     "    def on_error(self, status):\n",
     "        print ('error status', status)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "data = {\"_id\":\"1143899803807600640\",\"created_at\":\"Wed Jun 26 15:12:20 +0000 2019\",\"id\":\"1143899803807600640\",\"id_str\":\"1143899803807600640\",\"text\":\"RT @pistolapedrinho: AGORA É OFICIAL: A ZIKA ACABOU!! https://t.co/V6XscNErBX\"}"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "error_data = {}\n",
-    "error_data['error'] = 'duplicated file'\n",
-    "error_data['text'] = data['text']\n",
-    "cur_time = strftime(\"%Y-%m-%d %H:%M:%S\", gmtime())\n",
-    "error_data['time'] = cur_time\n",
-    "collection_test.insert_one(error_data)"
    ]
   },
   {
@@ -733,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
