updates, added readme

--- a/notebooks/twitter_geolocation_eda.ipynb
+++ b/notebooks/twitter_geolocation_eda.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# geolocation eda\n",
+    "* Here we evaluate the geolocation variables from twitter data\n",
+    "* Order of priority of variables: place, coordinates, user.location\n",
+    "* if the last case, it will compare to a database of Brazilian cities to check if it matches correctly an existing location.\n",
+    "    * Database link: http://oxumare.ctweb.inweb.org.br:8081/search?q='+url_loc+'&format=json&addressdetail:1\n",
+    "http://oxumare.ctweb.inweb.org.br:8081/search?q='+location+'&format=json&addressdetail:1\n",
+    "* The source usedhere was provided by UFMG. File name: amostra.json"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +29,24 @@
     "import re\n",
     "import requests\n",
     "import time\n",
+    "import datetime\n",
     "\n",
-    "import dns\n",
+    "#import dns\n",
     "\n",
     "import urllib.parse\n",
     "from IPython.display import clear_output"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### get dates"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -38,12 +59,60 @@
    ],
    "source": [
     "count = 0\n",
+    "dates_list = []\n",
+    "\n",
+    "with codecs.open(r'C:\\Users\\mar85\\OneDrive\\Documentos\\data\\2019-ufmg\\amostra.json', 'r', 'utf-8') as f:\n",
+    "    for line in f:\n",
+    "        count += 1\n",
+    "        if count % 20000 == 0: \n",
+    "            clear_output()\n",
+    "            print(count, 'lines already processed.')\n",
+    "        tweet = json.loads(line)\n",
+    "        #pprint(tweet)\n",
+    "        dates_list.append(tweet['created_at'])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2019-03-19 02:22:06'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time.strftime('%Y-%m-%d %H:%M:%S', time.localtime(dates_list[-10]['$date']/1000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### get coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = 0\n",
     "sum_coordinates = 0\n",
     "sum_place  = 0\n",
     "sum_location = 0\n",
     "location_list = []\n",
     "\n",
-    "with codecs.open(r'C:\\Users\\Marcelo\\Downloads\\amostra.json', 'r', 'utf-8') as f:\n",
+    "with codecs.open(r'C:\\Users\\mar85\\OneDrive\\Documentos\\data\\2019-ufmg\\amostra.json', 'r', 'utf-8') as f:\n",
     "    for line in f:\n",
     "        count += 1\n",
     "        if count % 20000 == 0: \n",
@@ -67,6 +136,7 @@
    "metadata": {},
    "source": [
     "#### error types\n",
+    "Some errors might occurr during processing. They might be:\n",
     "* ConnectionError: ('Connection aborted.', ConnectionAbortedError(10053, 'An established connection was aborted by the software in your host machine', None, 10053, None))\n",
     "* ConnectionError: HTTPConnectionPool(host='oxumare.ctweb.inweb.org.br', port=8081): Max retries exceeded with url: /search?q=S%C3%A3o+Paulo&format=json&addressdetail:1 (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x000001601C9142E8>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed'))\n",
     "* ConnectionError: HTTPConnectionPool(host='oxumare.ctweb.inweb.org.br', port=8081): Max retries exceeded with url: /search?q=Londrina&format=json&addressdetail:1 (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x0000016027088588>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed'))"
@@ -231,6 +301,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# plot proportions of each geolocation data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 337,
    "metadata": {},
@@ -302,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
