--- a/notebooks/twitter_retriever.ipynb
+++ b/notebooks/twitter_retriever.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,19 @@
     "import dns\n",
     "from time import gmtime, strftime\n",
     "\n",
-    "from datetime import datetime, timedelta\n",
-    "#import time"
+    "from datetime import datetime, timedelta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# define twitter variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,12 +70,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### define pymongo collection"
+    "# define pymongo collection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,14 +104,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To drop collection: collection.drop()"
+    "To drop collection: \n",
+    "```python\n",
+    "collection.drop()\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### start retrieval\n",
+    "# start retrieval\n",
     "* Tokens used at UFMG are: dengue, aedes aegypti, chikungunya, zika, zica virus, chikungunia, mayaro\n",
     "* By setting tweet_mode='extended', I am capturing full text (280) chars. If I want truncated text (standard mode), I need 140 chars."
    ]
@@ -122,7 +131,7 @@
     "        data = json.loads(data)\n",
     "        data[\"_id\"] = data[\"id\"]\n",
     "        try: \n",
-    "            collection_myhome2.insert_one(data)\n",
+    "            collection_myhome.insert_one(data)\n",
     "\n",
     "        except Exception as error:\n",
     "            error = str(error)\n",
@@ -142,6 +151,14 @@
    "source": [
     "twitterStream = Stream(auth, listener(), tweet_mode='extended')\n",
     "twitterStream.filter(track=[\"dengue\", \"aedes\", \"aegypti\", \"chikungunya\", \"zika\", \"zica virus\", \"chikungunia\", \"mayaro\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### evaluate sample data\n",
+    "evaluate sample from mongoDB collection"
    ]
   },
   {
@@ -185,7 +202,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### insert geo_location data"
+    "# insert geo_location data\n",
+    "* insert geodata into each document. Here we try to collect geodata from some variables\n",
+    "* Order of priority of variables: place, coordinates, user.location\n",
+    "* if the last case, it will compare to a database of Brazilian cities to check if it matches correctly an existing location.\n",
+    "    * Database link: http://oxumare.ctweb.inweb.org.br:8081/search?q='+url_loc+'&format=json&addressdetail:1"
    ]
   },
   {
@@ -203,9 +224,8 @@
     "    elif document['coordinates'] is not None:\n",
     "        geo_location = document['coordinates']\n",
     "    else:\n",
-    "        #geo_location = document['user']['location']\n",
     "        url_loc =  document['user']['location']\n",
-    "        print('test bug:', url_loc)\n",
+    "        #print('test bug:', url_loc)\n",
     "        if url_loc is None: continue\n",
     "        url_loc = re.sub('(.*),.*', r'\\1', url_loc)\n",
     "        url_loc = urllib.parse.quote(url_loc)\n",
@@ -218,7 +238,7 @@
     "        if location_json['type'] == 'city' and country == 'Brasil':\n",
     "            geo_location = re.sub('(.*?),.*', r'\\1', location_json['display_name'])\n",
     "        else: continue\n",
-    "        print(geo_location)\n",
+    "        #print(geo_location)\n",
     "    result = collection_pt.update_one({'_id': doc_id}, {'$set': {'geo_location': geo_location}}, upsert=True)"
    ]
   },
@@ -285,69 +305,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# fixing error"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "last_past_date = 'Fri Jul 05 22:06:38 +0000 2019'\n",
-    "last_past_date = str_to_date(last_past_date)\n",
-    "last_past_date"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "lambda_docs = list(collection_lambda2.find({}))\n",
-    "home_docs = list(collection_myhome2.find({}))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "for doc in lambda_docs:\n",
-    "    doc_id = doc['_id']\n",
-    "    date = str_to_date(doc['created_at'])\n",
-    "    if date <= last_past_date:\n",
-    "        collection_lambda2.delete_one({'_id': doc_id})\n",
-    "    else: \n",
-    "        print('past date:', 'func =', date)\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "lambda_docs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# compare 2 asynchronous databases"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "date_test = 'Wed Jun 26 17:39:05 +0000 2019'[3:]\n",
-    "#year = date_test[-4:]\n",
-    "date_test = date_test[-4:]+date_test[:-11]\n",
-    "print(date_test) "
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "datetime.strptime(date_test, \"%Y %b %d %H:%M:%S\")\n"
+    "# compare 2 asynchronous databases\n",
+    "If you are collecting tweets using two different machines, it might be interesting to compare the collected data to see if some tweets are missing. This allows to check how well each machine is performing."
    ]
   },
   {
@@ -406,20 +365,20 @@
     }
    ],
    "source": [
-    "first_doc = collection_lambda2.find_one()\n",
+    "first_doc = collection_lambda.find_one()\n",
     "if first_doc['_id'] == 1143921605497819136:\n",
     "    print('first doc found')\n",
     "lambda_date = str_to_date(first_doc['created_at'])\n",
-    "home_docs = collection_myhome2.find({})\n",
+    "home_docs = collection_myhome.find({})\n",
     "for home_doc in home_docs:\n",
     "    doc_id = home_doc['_id']\n",
     "    home_date = str_to_date(home_doc['created_at'])\n",
     "    if home_date < lambda_date:\n",
     "        print('dates are not synchronized at:', 'home_func =', home_date, ', lambda_func =', lambda_date)\n",
-    "        collection_myhome2.delete_one({'_id': doc_id})\n",
+    "        collection_myhome.delete_one({'_id': doc_id})\n",
     "    else: \n",
     "        break\n",
-    "if first_doc['_id'] == collection_myhome2.find_one()['_id']: print('start is synchronized')"
+    "if first_doc['_id'] == collection_myhome.find_one()['_id']: print('start is synchronized')"
    ]
   },
   {
@@ -428,16 +387,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "home_docs = collection_myhome2.find({})\n",
+    "home_docs = collection_myhome.find({})\n",
     "last_home_doc =  list(home_docs)[-1]\n",
     "home_date = str_to_date(last_home_doc['created_at'])\n",
-    "lambda_docs = list(collection_lambda2.find({}))\n",
+    "lambda_docs = list(collection_lambda.find({}))\n",
     "for lambda_doc in lambda_docs:\n",
     "    doc_id = lambda_doc['_id']\n",
     "    lambda_date = str_to_date(lambda_doc['created_at'])\n",
     "    if home_date < lambda_date:\n",
     "        print('dates are not synchronized at:', 'home_func =', home_date, ', lambda_func =', lambda_date)\n",
-    "        collection_lambda2.delete_one({'_id': doc_id})\n",
+    "        collection_lambda.delete_one({'_id': doc_id})\n",
     "last_lambda_doc =  lambda_docs[-1]\n",
     "if last_lambda_doc['_id'] == last_home_doc['_id']: print('end is synchronized')"
    ]
@@ -604,8 +563,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda_docs = list(collection_lambda2.find({}))\n",
-    "home_docs = list(collection_myhome2.find({}))"
+    "lambda_docs = list(collection_lambda.find({}))\n",
+    "home_docs = list(collection_myhome.find({}))"
    ]
   },
   {
@@ -656,22 +615,30 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#allocated memory: 384mb, cloudwatch: 6min, duration 13min\n",
-    "diff: 14 , home_size: 223 , lambda_size: 209 , loss: 6.28 %\n",
-    "start date: Sat Jul 06 21:06:28 +0000 2019 <<<>>> end date: Sat Jul 06 22:00:11 +0000 2019"
+    "# log of last results\n",
+    "1)\n",
+    "* allocated memory: 384mb, cloudwatch: 6min, duration 13min\n",
+    "* diff: 14 , home_size: 223 , lambda_size: 209 , loss: 6.28 %\n",
+    "* start date: Sat Jul 06 21:06:28 +0000 2019 <<<>>> end date: Sat Jul 06 22:00:11 +0000 2019\n",
+    "\n",
+    "2)\n",
+    "* allocated memory: 128mb, cloudwatch: 12min, duration 13min\n",
+    "* diff: 44 , home_size: 333 , lambda_size: 289, loss: 13% \n",
+    "* start date: Fri Jul 05 16:48:50 +0000 2019 <<<>>> end date: Fri Jul 05 17:53:53 +0000 2019"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": [
-    "#allocated memory: 128mb, cloudwatch: 12min, duration 13min\n",
-    "diff: 44 , home_size: 333 , lambda_size: 289, loss: 13% \n",
-    "start date: Fri Jul 05 16:48:50 +0000 2019 <<<>>> end date: Fri Jul 05 17:53:53 +0000 2019"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -697,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
